--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name = Air
 
 [ReadmeFromPod]
-enabled = false
-; filename = lib/Air.rakumod
+enabled = true
+filename = lib/Air.rakumod
 
 [UploadToZef]
 
