--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
