--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - macos-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
